--- a/views/index.jade
+++ b/views/index.jade
@@ -55,7 +55,7 @@ block content
 	h2 Some additional notes...
 	
 	p Currently the number of configs is kind of limited. More options may come in future.
-	p There currently is a german discussion on Sendegate as well as a github-repo if you wish to leave feedback.
+	p: There currently is a german discussion on Sendegate as well as a #[a(href="https://github.com/Suven/Podlovestyler") github-repo] if you wish to leave feedback.
 							
 	script.
 		(function() {
