--- a/views/playerV1.jade
+++ b/views/playerV1.jade
@@ -40,8 +40,7 @@ article#post-27.post-27.podcast.type-podcast.status-publish.hentry.post
 					td.avatar_cell
 						img.avatar.avatar-50.photo(alt="avatar", src="https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=50&d=mm&r=g", height="50", width="50")
 
-					td.title_cell
-						Jan Eric Hellbusch
+					td.title_cell Jan Eric Hellbusch
 
 					td.social_cell
 						a(target="_blank", title="Twitter", href="https://twitter.com/2bweb")
