--- a/views/index.jade
+++ b/views/index.jade
@@ -60,7 +60,7 @@ block content
 	h2 Some additional notes...
 	
 	p Currently the number of configs is kind of limited. More options may come in future.
-	p: There currently is a german discussion on Sendegate as well as a #[a(href="https://github.com/Suven/Podlovestyler") github-repo] if you wish to leave feedback.
+	p For feedback, join the german discussion on #[a(href="https://sendegate.de/t/webtool-zum-anpassen-des-podlove-players/1044") Sendegate] or write an issue in my #[a(href="https://github.com/Suven/Podlovestyler") github-repo].
 							
 	script.
 		(function() {
