replaced jans avatar

--- a/views/playerV1.jade
+++ b/views/playerV1.jade
@@ -38,7 +38,7 @@ article#post-27.post-27.podcast.type-podcast.status-publish.hentry.post
 				
 				tr
 					td.avatar_cell
-						img.avatar.avatar-50.photo(alt="avatar", src="https://www.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=50&d=mm&r=g", height="50", width="50")
+						img.avatar.avatar-50.photo(alt="avatar", src="http://webgeplapper.de/pod/jan-eric-hellbusch.jpg", height="50", width="50")
 
 					td.title_cell Jan Eric Hellbusch
 
