minor piwik-fix for noscript-part

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,4 +35,4 @@ html(lang='en')
         | ]); var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s); })();
       noscript
         p
-          img(src="#[= process.env.PIWIK_URL]/piwik.php?idsite=#[= process.env.PIWIK_ID]", style="border:0;")
+          img(src=process.env.PIWIK_URL + "/piwik.php?idsite=" + process.env.PIWIK_ID, style="border:0;")
