load the custom style before rendering
... the player

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,8 @@ html(lang='en')
       link(rel='stylesheet', href='/components/jquery-minicolors/jquery.minicolors.css')
       link(rel='stylesheet', id='podlove-frontend-css-css', href='http://webgeplapper.de/wp-content/plugins/podlove-podcasting-plugin-for-wordpress/css/frontend.css?ver=1.0', type='text/css', media='all')
       link(rel='stylesheet', id='podlove-admin-font-css', href='http://webgeplapper.de/wp-content/plugins/podlove-podcasting-plugin-for-wordpress/css/admin-font.css?ver=1.12.1-alpha', type='text/css', media='all')
+      style#podstyle
+        include ../public/css/pod.css
       link(rel='stylesheet', id='pwpfont-css', href='http://webgeplapper.de/wp-content/plugins/podlove-podcasting-plugin-for-wordpress/lib/modules/podlove_web_player/player/podlove-web-player/static/podlove-web-player.css?ver=2.0.17', type='text/css', media='all')
      
     block js
