--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,14 +15,12 @@ html(lang='en')
      
     block js
       script(type='text/javascript', src='/components/pace/pace.min.js')
-      script(type='text/javascript', src='/components/jquery/dist/jquery.min.js')
-      script(type='text/javascript', src='/components/jquery-minicolors/jquery.minicolors.min.js')
       script(type='text/javascript', src='http://webgeplapper.de/wp-includes/js/jquery/jquery.js?ver=1.11.1')
       script(type='text/javascript', src='http://webgeplapper.de/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1')
       script(type='text/javascript', src='http://webgeplapper.de/wp-content/plugins/podlove-podcasting-plugin-for-wordpress/js/frontend.js?ver=1.12.1-alpha')
       script(type='text/javascript', src='http://webgeplapper.de/wp-content/plugins/podlove-podcasting-plugin-for-wordpress/lib/modules/podlove_web_player/player/podlove-web-player/static/hashchange.min.js?ver=1.3.0')
       script(type='text/javascript', src='http://webgeplapper.de/wp-content/plugins/podlove-podcasting-plugin-for-wordpress/lib/modules/podlove_web_player/player/podlove-web-player/static/podlove-web-player.js?ver=2.0.17')
- 
+      
   body
     | <a href="https://github.com/Suven/Podlovestyler"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
     
@@ -38,3 +36,7 @@ html(lang='en')
       noscript
         p
           img(src=process.env.PIWIK_URL + "/piwik.php?idsite=" + process.env.PIWIK_ID, style="border:0;")
+          
+    block foot-js
+      script(type='text/javascript', src='/components/jquery-minicolors/jquery.minicolors.min.js')
+      script(type='text/javascript', src='/js/main.js')      
