--- a/public/css/pod.scss
+++ b/public/css/pod.scss
@@ -4,6 +4,8 @@ $iconColor: #fff;
 $iconColorHover: #FA6900;
 $borderRadius: 5px;
 $progressbarColor: #ddd;
+$showContribs: true;
+$compactHeader: true;
 
 // Downloads
 article.podcast .episode_downloads {
@@ -13,7 +15,7 @@ article.podcast .episode_downloads {
 // Player
 article.podcast .podlovewebplayer_wrapper {
 	background-color: $baseColor;
-	border-radius: $borderRadius $borderRadius 0 0;
+	border-radius: $borderRadius;
 
   .mejs-container .mejs-inner .mejs-controls .mejs-time-rail .mejs-time-total .mejs-time-loaded {
     background: lighten($baseColor, 10%) !important;
@@ -92,14 +94,9 @@ article.podcast .podlovewebplayer_wrapper {
 	}
 	
 	.podlovewebplayer_meta {
-		min-height: 0;
 		
 		.bigplay {
 			border: none !important;
-			font-size: 16px;
-			height: auto;
-			width: auto;
-			padding: 5px 0 0 16px;
       color: $iconColor;
 			
 			&:hover {
@@ -124,98 +121,18 @@ article.podcast .podlovewebplayer_wrapper {
 		text-shadow: none;
 	}
 	
-	.episodetitle {
-  	display: none;
-	}
-	
-	.subtitle {
-  	font-size: 0;
-  	text-indent: 100%;
-	}
-	
-	.coverart, .podlovewebplayer_meta .togglers a.infowindow, .podlovewebplayer_meta .togglers a.infowindow:before {
-		content: normal;
-		display: none;
-	}
-	
 }
 
 // Contrib 
-
-article.podcast .podlove-contributors-table {
-	background: none;
-	color: $textColor;;
-	width: 100%;
-	
-	border-spacing: 0;
-	border-collapse: separate;
-	border: 0;
-	margin: 0;
-	padding: 0;
-	
-  th {
-  	color: $textColor;
-  	padding-left: .5em;
-	}
-	
-	td {
-		padding: 0;
-		height: 50px;
-  	border: 0;
-		
-		&.flattr_cell {
-			width: 125px;
-		}
-		
-		&.avatar_cell {
-			position: relative;
-			
-			.avatar {
-				position: absolute;
-				top: 0;
-				left: 0;
-			}
-		}
-		
-		&.social_cell a, &.donation_cell a, &.flattr_cell iframe {
-			position: relative;
-			top: 3px;
-		}
-		
-		&.flattr_cell iframe {
-			left: 7px;
-		}
-		
-		&.title_cell {
-			font-size: 14px;
-			letter-spacing: 1px;
-		}
-
-	}
-	
-	tr {
-		background: lighten($baseColor, 10%);
-		padding: 0;
-		margin: 0;
-		
-		.flattr_cell {
-			background: lighten($baseColor, 14%);
-		}
-	}
-	tr:nth-child(odd) {
-		background: lighten($baseColor, 8%);
-		
-		.flattr_cell {
-			background: lighten($baseColor, 12%);
-		}
-	}
-	
-	.avatar_cell {width: 60px;}
-	.title_cell {line-height: 1em;}
-  .social_cell a, .podlove-contributors-table .donation_cell a {margin-right: 4px;background: none;text-decoration: none;}
-  a {border: 0;}
-	a img {display: inline;}
-	.flattr_cell iframe {margin-bottom: 0px;}
-	td {vertical-align: middle;}
-
+@if $showContribs {
+  @import "contrib";
+} @else {
+  article.podcast .podlove-contributors-table {
+    display: none;
+  }
+}
+  
+// Compact Header
+@if $compactHeader {
+  @import "compact";
 }
