--- a/public/css/pod.scss
+++ b/public/css/pod.scss
@@ -1,9 +1,9 @@
-$baseColor: #333333;
+$baseColor: #79858e;
 $textColor: #fff;
 $iconColor: #fff;
-$iconColorHover: #FA6900;
+$iconColorHover: #26292b;
 $borderRadius: 5px;
-$progressbarColor: #ddd;
+$progressbarColor: #f2f4f7;
 $showContribs: true;
 $compactHeader: true;
 
