--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,10 +1,27 @@
 body {
-  padding: 15px 50px 0 50px;
+  padding: 15px 50px 50px 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #323539;
+  color: #f2f4f7;
+  
+  background-image: url('/img/bg.png');
+  background-repeat: no-repeat;
+  background-position: right top;
+  background-size: 225px 150px;
 }
 
 a {
   color: #00B7FF;
+}
+
+h1#main {
+  font-family: "adelle",serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
+h2 {
+  margin-top: 2em;
 }
 
 #generated, #generatedWithWrapper {
@@ -14,6 +31,7 @@ a {
 
 .demo {
   position: relative;
+  margin: 58px 0 5em 0;
   
   article {
     z-index: 2;
@@ -21,11 +39,12 @@ a {
   }
   
   .demoBg {
-    background-color: #eee;
+    background-color: #f2f4f7;
     position: absolute;
+    box-shadow: 0 0 2px 1px #333;
     
-    top: 30px;
-    bottom: -12px;
+    top: -20px;
+    bottom: -20px;
     left: -58px;
     right: -58px;
     
@@ -76,40 +95,40 @@ a {
 .pace {
   -webkit-pointer-events: none;
   pointer-events: none;
-
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
-
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-
-  -webkit-transform: translate3d(0, -50px, 0);
-  -ms-transform: translate3d(0, -50px, 0);
-  transform: translate3d(0, -50px, 0);
-
-  -webkit-transition: -webkit-transform .5s ease-out;
-  -ms-transition: -webkit-transform .5s ease-out;
-  transition: transform .5s ease-out;
 }
 
-.pace.pace-active {
-  -webkit-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
+.pace-inactive {
+  display: none;
 }
 
 .pace .pace-progress {
-  display: block;
+  background: #f2f4f7;
   position: fixed;
   z-index: 2000;
   top: 0;
   right: 100%;
   width: 100%;
-  height: 10px;
-  background: #333;
+  height: 3px;
+}
 
-  pointer-events: none;
+.pace .pace-progress-inner {
+  display: block;
+  position: absolute;
+  right: 0px;
+  width: 100px;
+  height: 100%;
+  box-shadow: 0 0 10px #f2f4f7, 0 0 5px #f2f4f7;
+  opacity: 1.0;
+  -webkit-transform: rotate(3deg) translate(0px, -4px);
+  -moz-transform: rotate(3deg) translate(0px, -4px);
+  -ms-transform: rotate(3deg) translate(0px, -4px);
+  -o-transform: rotate(3deg) translate(0px, -4px);
+  transform: rotate(3deg) translate(0px, -4px);
+}
+
+.pace .pace-activity {
+  display: none;
 }
