--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,3 +1,7 @@
+html {
+  min-width: 600px;
+}
+
 body {
   padding: 15px 50px 50px 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
