--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,6 +16,7 @@ html(lang='en')
     block js
       script(type='text/javascript', src='/components/pace/pace.min.js')
       script(type='text/javascript', src='//use.typekit.net/ere8ara.js')
+      script try{Typekit.load();}catch(e){}
       script(type='text/javascript', src='http://webgeplapper.de/wp-includes/js/jquery/jquery.js?ver=1.11.1')
       script(type='text/javascript', src='http://webgeplapper.de/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1')
       script(type='text/javascript', src='http://webgeplapper.de/wp-content/plugins/podlove-podcasting-plugin-for-wordpress/js/frontend.js?ver=1.12.1-alpha')
