--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
   head
     meta(charset='UTF-8')
-    meta(name='viewport', content='width=device-width')
+    meta(name='viewport', content='width=900')
     title= title
     block css
       link(rel='stylesheet', href='/css/style.css')
