--- a/public/css/contrib.scss
+++ b/public/css/contrib.scss
@@ -5,12 +5,12 @@ article.podcast .podlovewebplayer_wrapper {
 
 // Contrib 
 article.podcast .podlove-contributors-table {
-	background: none;
+	background: $baseColor;
 	color: $textColor;;
 	width: 100%;
 	
 	border-spacing: 0;
-	border-collapse: separate;
+	border-collapse: collapse;
 	border: 0;
 	margin: 0;
 	padding: 0;
