--- a/views/index.jade
+++ b/views/index.jade
@@ -52,6 +52,12 @@ block content
 			select#showContribs(data-val="bool")
 				option(value="true", selected) Visible
 				option(value="false") Hidden
+				
+		.form-group
+			label(for="downloadButtons") Download-Buttons
+			select#downloadButtons(data-val="bool")
+				option(value="true", selected) Styled
+				option(value="false") Unstyled
 	
 	h2 Output
 	
