initially hide the download-buttons

--- a/public/css/pod.scss
+++ b/public/css/pod.scss
@@ -6,7 +6,7 @@ $borderRadius: 5px;
 $progressbarColor: #f2f4f7;
 $showContribs: true;
 $compactHeader: true;
-$downloadButtons: true;
+$downloadButtons: false;
 
 // Player
 article.podcast .podlovewebplayer_wrapper {
