--- a/views/index.jade
+++ b/views/index.jade
@@ -56,8 +56,8 @@ block content
 		.form-group
 			label(for="downloadButtons") Download-Buttons
 			select#downloadButtons(data-val="bool")
-				option(value="true", selected) Styled
-				option(value="false") Unstyled
+				option(value="true") Styled
+				option(value="false", selected) Unstyled
 	
 	h2 Output
 	
