fixed margin-issue in the donation-cell

--- a/public/css/contrib.scss
+++ b/public/css/contrib.scss
@@ -74,7 +74,7 @@ article.podcast .podlove-contributors-table {
 	
 	.avatar_cell {width: 60px;}
 	.title_cell {line-height: 1em;}
-  .social_cell a, .podlove-contributors-table .donation_cell a {margin-right: 4px;background: none;text-decoration: none;}
+  .social_cell a, .donation_cell a {margin-right: 4px;background: none;text-decoration: none;}
   a {border: 0;}
 	a img {display: inline;}
 	.flattr_cell iframe {margin-bottom: 0px;}
