support for embedded episodes

--- a/public/css/compact.scss
+++ b/public/css/compact.scss
@@ -1,5 +1,6 @@
 // Player
-article.podcast .podlovewebplayer_wrapper {
+article.podcast .podlovewebplayer_wrapper,
+.episode-overview .podlovewebplayer_wrapper {
  
 	.podlovewebplayer_meta {
 		min-height: 0;
