support for standalone-players
... which are not using the whole publisher-environment

--- a/public/css/compact.scss
+++ b/public/css/compact.scss
@@ -1,6 +1,7 @@
 // Player
 article.podcast .podlovewebplayer_wrapper,
-.episode-overview .podlovewebplayer_wrapper {
+.episode-overview .podlovewebplayer_wrapper,
+.podcast_player .podlovewebplayer_wrapper {
  
 	.podlovewebplayer_meta {
 		min-height: 0;
