--- a/public/css/contrib.scss
+++ b/public/css/contrib.scss
@@ -1,12 +1,14 @@
 // Player
 article.podcast .podlovewebplayer_wrapper,
-.episode-overview .podlovewebplayer_wrapper {
+.episode-overview .podlovewebplayer_wrapper,
+.podcast_player .podlovewebplayer_wrapper {
 	border-radius: $borderRadius $borderRadius 0 0;
 }
 
 // Contrib 
 article.podcast .podlove-contributors-table,
-.episode-overview .podlove-contributors-table {
+.episode-overview .podlove-contributors-table,
+.podcast_player .podlove-contributors-table {
 	background: $baseColor;
 	color: $textColor;;
 	width: 100%;
