--- a/public/css/download.scss
+++ b/public/css/download.scss
@@ -1,12 +1,14 @@
 // Player
 article.podcast .podlovewebplayer_wrapper,
-.episode-overview .podlovewebplayer_wrapper {
+.episode-overview .podlovewebplayer_wrapper,
+.podcast_player .podlovewebplayer_wrapper {
 	border-radius: $borderRadius $borderRadius 0 0;
 }
 
 // Downloads
 article.podcast .episode_downloads,
-.episode-overview .episode_downloads {
+.episode-overview .episode_downloads,
+.podcast_player .episode_downloads {
 	
 	@if $showContribs == false {
 		border-radius: 0 0 $borderRadius $borderRadius;
