--- a/public/css/compact.scss
+++ b/public/css/compact.scss
@@ -27,5 +27,14 @@ article.podcast .podlovewebplayer_wrapper,
 		content: normal;
 		display: none;
 	}
+	
+	.podlovewebplayer_meta .togglers .infobuttons {
+		margin-top: 10px;
+	}
+	
+	.podlovewebplayer_meta .togglers .infowindow.infobuttons {
+		display: none;
+		height: 0;
+	}
   
 }
