--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,7 +36,9 @@ html(lang='en')
       noscript
         p
           img(src=process.env.PIWIK_URL + "/piwik.php?idsite=" + process.env.PIWIK_ID, style="border:0;")
-          
+
+    iframe(scrolling="no", style="border: 0; width: 728px; height: 90px; margin-left: auto; margin-right: auto; margin-top: 1em; margin-bottom: 1em;", src="//coinurl.com/get.php?id=40360")
+
     block foot-js
       script(type='text/javascript', src='/components/jquery-minicolors/jquery.minicolors.min.js')
       script(type='text/javascript', src='/js/main.js')      
